Min error and project to column space of x

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -21,6 +21,8 @@
         "     - Matrix notation of linear regression equations.\n",
         "     - build X matrix with loaded data\n",
         "     - Solve \" X β = y\"\n",
+        "    - Why $\\widehat{\\beta}$ and not just $\\beta$\n",
+        "\n",
         "  - How to solve uncertain set of linear equations?\n",
         "  - The line fitting.\n",
         "  - Connection between method of least squares and the distribution of error terms.\n",
@@ -363,30 +365,39 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###  Solve \" X β + ϵ= y\"\n",
+        "###  Solve \" X $\\widehat{\\beta}$ + ϵ= y\"\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "Putting all observation in a matrix, yields one line equation that is equivalent to solving the system of linear equations  that is :\n",
-        "$$ \\textbf{X} \\beta + \\epsilon = y$$\n",
+        "$$ \\textbf{X} \\widehat{\\beta} + \\epsilon = y$$\n",
         "\n",
         "Solving such equation would have been a standard procedure, if there were no error term $\\epsilon$ or uncertanty in other words.\n",
         "\n",
-        "Any solution of the matrix equation finds values for the $\\beta$ and values for $\\epsilon$.  Intuitively, we would like a solution that yields the minimum value of $\\epsilon$. But as $\\epsilon$ is an n-dimensional vector,  how do we compare them?\n",
+        "By a solution to $ \\textbf{X} \\widehat{\\beta} + \\epsilon = y$, we mean finding a value for $\\widehat{\\beta}$ and for $\\epsilon$.  But probably there is way too many answers for them. How to find the best? The simplest idea is to find one that has min value for $||\\epsilon|| =||\\mathbf{X} \\widehat{\\beta} - y||$.\n",
         "\n",
-        "One approach is to minimize $||\\epsilon||$ (the L2 norm of the vector), which equates to minimizing $||Ax - bX||$. Various techniques, like using derivatives, can achieve this minimization.\n",
+        "There are several ways to find $\\widehat{\\beta}$ such that it minimizes $||\\mathbf{X} \\widehat{\\beta} - y||$. For example taking partial deravatives in respect to $x_j$'s and find where all of them are 0.\n",
+        "\n",
+        "\n",
+        " my favorite approach is the one that uses some linear algebraic concepts such as projection. This is how it goes:\n",
+        "\n",
+        "The minimum value of $||\\textbf{X} \\widehat{\\beta}  - y||$ is the distance of y from it's projection onto column space of X. Lets call such projection $\\widehat{y}$. Thus $||\\textbf{X} \\widehat{\\beta}||$ has minimum value when  \n",
+        "\n",
+        "$$\\textbf{X} \\widehat{\\beta}  = \\widehat{y}$$\n",
+        "$\\textbf{X}$ and $\\widehat{y}$ are known and the goal is to find unkonwn $\\widehat{\\beta}$. This one is guaranteed to have solutions.\n",
+        "\n",
+        ". So all you need is to project y to columns space of $\\mathbf{X}$ and then solve a simple matrix equation that is guaranteed to have an answer.  \n",
         "\n",
         "\n",
         "\n",
-        "HERE!!! my favorite approach is to project y into column space of X and solve it. link the appendix\n",
+        "HERE!!! just mention the projection matrix.\n",
+        "HERE!!!!!! add stuff from book or move to appendix.\n",
+        "HERE!!!Then you can . link the appendix\n",
         "\n",
         "HERE!!! continue with second question and then move all X(XTX)-1 craziness to here, **name** my important eqs for easier reference\n",
         "\n",
-        "2. If we solve $\\textbf{X} \\beta  = \\hat{y}$ and find a solution for $\\beta$ , and plug those values in $\\textbf{X} \\beta + \\epsilon = y$, resulting $\\epsilon = ||Ax -b ||$ is minimized. The intuitvive reason is that $\\hat{y}$ is closest point to $y$ that exist on the span.\n",
         "\n",
-        "3. With all that being said, we need two steps: step one is to find $\\hat{y}$, and step two is solve $\\textbf{X} \\hat{\\beta}  = \\hat{y}$.\n",
-        "\n",
-        "2. To find such $\\hat{y}$, (closest point to $y$ on the column space of X) we can use a matrix that project any vector to vector space made by span of columns of X. This matrix is a change of basis to column space of $X$.\n",
-        "\n",
-        "3. Finding such matrix really depends on X features For example if X is a square matrix with all orthogonal columns, no such projection is needed cause X spans the whole dimension. If X has orthogonal columns but not square, that projection is $XX^T$. In general case it is $X(X^TX)^{-1}X^T$. Lets call this $X^+$ from now on.  The proof has to do with svd and stuff.\n",
         "\n",
         "\n",
         "Lets calculate $X^+$ for our sample. HERE!!!\n",
@@ -477,6 +488,16 @@
       ],
       "metadata": {
         "id": "dwygEhfQ_ky0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Why $\\widehat{\\beta}$ and not just $\\beta$\n",
+        "I would like to have a quick note on why we set out to find $\\widehat{\\beta}$ and not the $\\beta$. $\\beta$ is the population regression coefficient whereas $\\widehat{\\beta}$ is the sample regression coefficient. By solving the equation for a given sample, we find values for  $\\beta$ and $\\epsilon$. The $\\widehat{}$ sign basically tells us that there is no guarantee that by following a procedure on a given sample we are going to find the exact $\\beta$ simply because we see a portion of whole data. But keep in mind a good procedure is one that calculates unbiased $\\widehat{\\beta}$ over all possible samples (meaning their average equals the poulation regression coefficients). 🎩"
+      ],
+      "metadata": {
+        "id": "IOAwHr7_QqV9"
       }
     },
     {
@@ -695,37 +716,10 @@
       "cell_type": "markdown",
       "source": [
         "## Appendix: Some linear algebra\n",
-        "Consider this matrix equation:\n",
+        "As we said the minimum value of $||\\textbf{X} \\widehat{\\beta}  - y||$ is the distance of y from it's projection onto column space of X. Lets call such projection $\\widehat{y}$. Thus $||\\textbf{X} \\widehat{\\beta}||$ has minimum value when  \n",
+        "\n",
         "$$\\textbf{X} \\widehat{\\beta}  = \\widehat{y}$$\n",
-        "$\\textbf{X}$ and $\\widehat{y}$ are known and the goal is to find unkonwn $\\widehat{\\beta}$.\n",
-        "Most important question is  when  this equation have answer? To answer this question, let's switch to another view of the equation:\n",
-        "\n",
-        "\n",
-        "A standard process is to exapnd the matrix notation as a scaled sum of columns of X.\n",
-        "\n",
-        "$$\n",
-        "\\widehat{y} =\n",
-        "\\mathbf{X}.\n",
-        "\\begin{bmatrix}\n",
-        "\\beta_0 \\\\\n",
-        "\\vdots \\\\\n",
-        "\\beta_p \\\\\n",
-        "\\end{bmatrix}\n",
-        "= \\\\\n",
-        "\\begin{bmatrix}\n",
-        "\\mathbf{x_0}  \\cdots  \\mathbf{x_p}\n",
-        "\\end{bmatrix}.\\begin{bmatrix}\n",
-        "\\beta_0 \\\\\n",
-        "\\vdots \\\\\n",
-        "\\beta_p \\\\\n",
-        "\\end{bmatrix}\n",
-        "$$\n",
-        "Where $\\mathbf{x_i}$ is the i-th column of $\\mathbf{X}$. (Remember that the ith column of $\\mathbf{X}$ is $\\begin{bmatrix}\n",
-        "x_{1i} \\\\\n",
-        "x_{2i} \\\\\n",
-        "\\vdots \\\\\n",
-        "x_{ni}\n",
-        "\\end{bmatrix}$)"
+        "$\\textbf{X}$ and $\\widehat{y}$ are known and the goal is to find unkonwn $\\widehat{\\beta}$. This one is guaranteed to have solutions."
       ],
       "metadata": {
         "id": "KWHMu8ZeHkst"
@@ -754,38 +748,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In the **expanded formula**, on the left hand side we have we have an unknown  combination of $\\mathbf{X}$ columns and on the right side we have $\\widehat{y}$. We would like to find the combinations of columns of $\\mathbf{X}$ that equals to $\\widehat{y}$.\n",
         "\n",
-        "Two algebraic concepts pop up here: first, linear **span** of a set of vectors, secondly, **column space of a matrix**. Basically, X can be viewed as set of its column vectors.  Subsequently, column space of X is linear span of all of its columns $\\mathbf{x_i}$.\n",
-        "\n",
-        "To find $\\sum_{i \\in [0, ...,p]} \\beta_i * \\mathbf{x}_i = \\widehat{y}$ is to find a linear combination of columns of X that equals to $\\widehat{y}$.\n",
-        "Lets revisit the question we asked above.\n",
-        "\n",
-        "**Question 1**: When does this equation have answer?\n",
-        "\n",
-        "**Answer**: The equation has answer if and only if $\\widehat{y}$ resists on the vector space of linear span of $\\mathbf{x_i}$'s.\n",
-        "\n",
-        "We assumend the equation have a solution. But what if the equation doesn? By the way this is why the linear regression equation has the $\\epsilon$ term in it meaning that there is no exact solution for matrix equation. Also this is the reason we denote **sample** regression coefficient by $\\widehat{\\beta}$ meaning that we don't have access to the exact $\\beta$.\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "7tbD1EalLaZW"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "Lets work on another matrix equation that resembles **line fitting** equation:\n",
-        "$$ \\textbf{X} {\\beta}  + \\epsilon= {y}$$\n",
-        "\n",
-        "The goal here is to come up with an  equation that always have an answer.  \n",
-        "\n",
-        " If y is not in column space of X, we can find closest $\\widehat{y}$ that is in the span of columns of $X$ and solve the equation for that:\n",
-        " $$ \\textbf{X} \\widehat{\\beta}  = \\widehat{y}$$\n",
         "\n",
         "How can we project $y$ to columns space of $\\mathbf{X}$?\n",
         "1. Turns out it really depends. For example if $\\mathbf{X}$ is a square matrix, then every vector of right dimension is already on column space of $\\mathbf{X}$.\n",
@@ -830,7 +793,7 @@
         "\n",
         "HERE!!! put all X(XTX)-1 craziness to here, **NAME** my important eqs for easier reference 🌨 First tag them with **(NAME=EXPANDED_MATRIX_EQ)**. ask chat how\n",
         "\n",
-        "\n",
+        "HERE!!!! so what is the solution for $\\widhat{beta}$???\n",
         "\n",
         "Now lets sample a set and try these matrices.\n",
         "Let's construct the  matrix X for the data we sampled. We can check some algebraic measures on matrix X then. I would suggest try to answer a few questions for yourself, such as\n",
