--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -716,10 +716,11 @@
       "cell_type": "markdown",
       "source": [
         "## Appendix: Some linear algebra\n",
-        "As we said the minimum value of $||\\textbf{X} \\widehat{\\beta}  - y||$ is the distance of y from it's projection onto column space of X. Lets call such projection $\\widehat{y}$. Thus $||\\textbf{X} \\widehat{\\beta}||$ has minimum value when  \n",
+        "As we said the minimum value of $||\\textbf{X} \\widehat{\\beta}  - y||$ is the distance of y from it's projection onto column space of X. Lets say $\\widehat{y}$ is the projection of $y$ onto column space of X. Thus $||\\textbf{X} \\widehat{\\beta}||$ has minimum value when:  \n",
         "\n",
         "$$\\textbf{X} \\widehat{\\beta}  = \\widehat{y}$$\n",
-        "$\\textbf{X}$ and $\\widehat{y}$ are known and the goal is to find unkonwn $\\widehat{\\beta}$. This one is guaranteed to have solutions."
+        "\n",
+        "So we ended up with a matrix equation that always has an answer. That is great. To find the least square solution, all we need to do is to find the projection $\\widehat{y}$ and then solve the new equation."
       ],
       "metadata": {
         "id": "KWHMu8ZeHkst"
@@ -734,12 +735,8 @@
         "1. Turns out it really depends. For example if $\\mathbf{X}$ is a square matrix, then every vector of right dimension is already on column space of $\\mathbf{X}$.\n",
         "\n",
         "2. If $\\mathbf{X}$ columns are orthonormal basis, $\\mathbf{X}\\mathbf{X}^T$ is desired projection.\n",
-        "3. In the most general case $ \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T$ is such a projection ( In fact a change of basis). We call this a **Projection** matrix based on $\\mathbf{X}$ and denote it with $X^*$, from now on.\n",
-        "$$ X^* =  \\mathbf{X}(\\mathbf{X}^T\\mathbf{X})^{-1}\\mathbf{X}^T\n",
-        "$$\n",
         "\n",
-        "Althogh $X \\beta = y$ might not have an answer, $X \\widehat{\\beta} = X^* y $ would defientely have solution since  $X^* y$ lies in column space of $X$.\n",
-        "\n",
+        "HERE!!! how to find the P RanA (projection matrix to column space of X, follow the book and add here and example...)\n",
         "It means of finding $\\beta$, we set out to find $\\widehat{\\beta}$ in\n",
         "$$\\widehat{y} = X^* y =  \\mathbf{X} \\widehat{\\beta}$$ 🤯\n",
         "\n",
