more on solving for y hat

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -743,18 +743,16 @@
         "$$\n",
         "\\begin{align}\n",
         "X^T (X \\beta - y) = 0 & \\\\\n",
-        "X^T X \\beta = X^T y &\n",
+        "X^T X \\beta = X^T y \\tag{Norma Equation}\n",
         "\\end{align}\n",
         "$$\n",
         "Since $X^TX$ is a square matrix and we if it has non 0 determinant it is invertible (easy thing to check). We use this fact to solve the $\\beta$\n",
         "$$\\beta = (X^TX)y$$\n",
         "\n",
-        "It's interesting that solution for $\\beta$ only depends on $X$ and not on $y$ anymore.\n",
+        "Few things to notice here. First of all, solution for $\\beta$ only depends on $X$ and not on $y$ anymore. Secondly we did a lot of mind bending matrix calculation just to reach to **Normal equation** ? Also if why don't we just use inverted X instead of inverting  $X^T X$ ? Well a shallow answer might be because $X^T X$ is a square matrix.\n",
         "\n",
-        "\n",
-        "HERE!!! how to find the P RanA (projection matrix to column space of X, follow the book and add here and example...)\n",
-        "It means of finding $\\beta$, we set out to find $\\widehat{\\beta}$ in\n",
-        "$$\\widehat{y} = X^* y =  \\mathbf{X} \\widehat{\\beta}$$ 🤯"
+        "HERE!!! Lets see this in the data.\n",
+        "HERE!!! read bilinear forms https://en.wikipedia.org/wiki/Change_of_basis"
       ],
       "metadata": {
         "id": "vlfrCrCmJ16m"
