XTX and sketch of proof for maximum liklyhood

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -66,10 +66,29 @@
         "!git config --global user.name \"Amineh Dadsetan\""
       ],
       "metadata": {
-        "id": "19DE6S_AX97z"
+        "id": "19DE6S_AX97z",
+        "outputId": "1f230813-f111-4104-946d-89112017d781",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: cannot change to 'AminehTechnicalWritings': No such file or directory\n",
+            "Cloning into 'AminehTechnicalWritings'...\n",
+            "remote: Enumerating objects: 407, done.\u001b[K\n",
+            "remote: Counting objects: 100% (266/266), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (174/174), done.\u001b[K\n",
+            "remote: Total 407 (delta 169), reused 152 (delta 89), pack-reused 141\u001b[K\n",
+            "Receiving objects: 100% (407/407), 3.79 MiB | 15.11 MiB/s, done.\n",
+            "Resolving deltas: 100% (248/248), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -85,7 +104,7 @@
       "metadata": {
         "id": "5j4eSlknAHha"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -96,12 +115,12 @@
       ],
       "metadata": {
         "id": "0W6vmWNrAOcm",
-        "outputId": "c7110c90-0e68-4702-ae9b-40b1df3b398d",
+        "outputId": "f04f8cee-f399-4192-debb-5e6d7ab03c55",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -157,7 +176,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -176,9 +195,9 @@
           "height": 452
         },
         "id": "C8IKsSGKKfew",
-        "outputId": "c5625154-88e2-4197-ceef-d767ca138cec"
+        "outputId": "33ef4070-5f00-46cc-e280-684d6644f752"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
@@ -339,9 +358,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0bddf682-5413-4e9c-a54d-12400b809051"
+        "outputId": "648647ab-3e6f-485c-f38e-25d2870cf095"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,22 +409,80 @@
         ". So all you need is to project y to columns space of $\\mathbf{X}$ and then solve a simple matrix equation that is guaranteed to have an answer.  \n",
         "\n",
         "\n",
+        "Long story short, there exists unique solution for $\\widehat{\\beta}$ that minimizes $||X \\widehat{\\beta} - y||$ and that is:\n",
+        "$$(X^T X)^{-1} X^T y$$\n",
         "\n",
-        "HERE!!! just mention the projection matrix.\n",
-        "HERE!!!!!! add stuff from book or move to appendix.\n",
-        "HERE!!!Then you can . link the appendix\n",
+        "We denote the $(X^TX)^{-1} X^T$  by $X^+$\n",
         "\n",
-        "HERE!!! continue with second question and then move all X(XTX)-1 craziness to here, **name** my important eqs for easier reference\n",
+        "For a full proof of the procedure you can take a look at the [appendix](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/LinearRegressionMatrix.ipynb#scrollTo=KWHMu8ZeHkst).  \n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "Lets calculate $X^+$ for our sample. HERE!!!\n",
-        "\n"
+        "Lets inspect the $X$ and $X^TX$ and finally $X^+$ matrix. We have built matrix `X` by putting together the all predictors in the sample. Shape of X is `(100,2)`. Which means it is not square matrix thus not inversible. How about rank of `X`?\n"
       ],
       "metadata": {
         "id": "cwhNfPNNkFAH"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"{X.shape=}\")\n",
+        "rank_X = np.linalg.matrix_rank(X)\n",
+        "print(f\"{rank_X=}\")"
+      ],
+      "metadata": {
+        "id": "OUBqmyFLdqQW",
+        "outputId": "77704643-3716-400f-bc3e-4402a0191469",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X.shape=(100, 2)\n",
+            "rank_X=2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "HERE!!!!Let's do the same for $X^TX$:"
+      ],
+      "metadata": {
+        "id": "aqDm6qdefHyx"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "XTX = X.T @ X\n",
+        "print(f\"{XTX.shape=}\")\n",
+        "rank_XTX = np.linalg.matrix_rank(XTX)\n",
+        "print(f\"{rank_XTX=}\")"
+      ],
+      "metadata": {
+        "id": "qpzB01ZffGLC",
+        "outputId": "c92f1681-e1d7-4a71-88ec-6644ebfb66b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "XTX.shape=(2, 2)\n",
+            "rank_XTX=2\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -504,6 +581,9 @@
       "cell_type": "markdown",
       "source": [
         "### what motivates $||Ax -b ||$ as a loss function\n",
+        "HERE!!!!!!!!!find proof that uses maximum liklihood and the dist of error to justify minimization of AX-b. HERE!!!!!!sketch of proofTo find the most likely y, under the condition of normal error,  which also means to find the most likely error vector (epsilon), probably you need to find optimal solution for an equation that leads to  $||Ax -b ||$\n",
+        "\n",
+        "\n",
         "We formulate uncertainty as a vector $\\epsilon$ that sample from a normal distribution.\n",
         "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, or as a function to minimize, I can add some more to it. HERE!!!\n",
         "In context of linear regression, $\\widehat{ \\beta}$ is called [**ordinary least squares estimator**](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem).\n",
@@ -736,22 +816,22 @@
         "\n",
         "Let's take a closer look\n",
         "\n",
-        "Since $X \\beta$ is eqaul to image of $y$ on $RAN_X$. Thus $X\\beta - y$ is prependicular to any column $x_i$ of $X$. That means\n",
-        "$${x_i}^T .(X \\beta - y) = 0$$\n",
+        "Since $X \\widehat\\beta$ is eqaul to image of $y$ on $RAN_X$. Thus $X\\beta - y$ is prependicular to any column $x_i$ of $X$. That means\n",
+        "$${x_i}^T .(X \\widehat\\beta - y) = 0$$\n",
         "For all $i$'s\n",
         "stacking the ${x_i}^T$ on top of each other as rows yields:\n",
         "$$\n",
         "\\begin{align}\n",
-        "X^T (X \\beta - y) = 0 & \\\\\n",
-        "X^T X \\beta = X^T y \\tag{Norma Equation}\n",
+        "X^T (X \\widehat\\beta - y) = 0 & \\\\\n",
+        "X^T X \\widehat\\beta = X^T y \\tag{Norma Equation}\n",
         "\\end{align}\n",
         "$$\n",
-        "Since $X^TX$ is a square matrix and we if it has non 0 determinant it is invertible (easy thing to check). We use this fact to solve the $\\beta$\n",
-        "$$\\beta = (X^TX)y$$\n",
+        "Since $X^TX$ is a square matrix and we if it has non 0 determinant it is invertible (easy thing to check). We use this fact to solve the $\\widehat\\beta$\n",
+        "$$\\widehat\\beta = (X^TX)^{-1} X^T y$$\n",
         "\n",
-        "Few things to notice here. First of all, solution for $\\beta$ only depends on $X$ and not on $y$ anymore. Secondly we did a lot of mind bending matrix calculation just to reach to **Normal equation** ? Also if why don't we just use inverted X instead of inverting  $X^T X$ ? Well a shallow answer might be because $X^T X$ is a square matrix.\n",
+        "Few things to notice here. First of all, solution for $\\widehat\\beta$ only depends on $X$ and not on $y$ anymore. Secondly we did a lot of mind bending matrix calculation just to reach to **Normal equation** ? Also if why don't we just use inverted X instead of inverting  $X^T X$ ? Well a shallow answer might be because $X^T X$ is a square matrix.\n",
         "\n",
-        "HERE!!! Lets see this in the data.\n",
+        "HERE!!! GO through rest of stuff and delete maybe\n",
         "HERE!!! read bilinear forms https://en.wikipedia.org/wiki/Change_of_basis"
       ],
       "metadata": {
