--- a/notebookes/SamplingStatsAndDistros.ipynb
+++ b/notebookes/SamplingStatsAndDistros.ipynb
@@ -946,7 +946,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "HERE!!!! add F-stat distribution over all samples, add r2, rse,\n",
+        "HERE!!!! pick a sample and a k that knn and linear regression computes the same function"
+      ],
       "metadata": {
         "id": "qKM-q77ouWe4"
       },
