justifying the loss function

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -72,7 +72,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "5j4eSlknAHha"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -176,7 +176,7 @@
       "metadata": {
         "id": "OSu41WDF_GAe"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -197,7 +197,7 @@
         "id": "C8IKsSGKKfew",
         "outputId": "33ef4070-5f00-46cc-e280-684d6644f752"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -360,7 +360,7 @@
         },
         "outputId": "648647ab-3e6f-485c-f38e-25d2870cf095"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -436,7 +436,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -472,7 +472,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,38 +580,27 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### what motivates $||Ax -b ||$ as a loss function\n",
-        "HERE!!!!!!!!!find proof that uses maximum liklihood and the dist of error to justify minimization of AX-b. HERE!!!!!!sketch of proofTo find the most likely y, under the condition of normal error,  which also means to find the most likely error vector (epsilon), probably you need to find optimal solution for an equation that leads to  $||Ax -b ||$\n",
+        "### what motivates $||X \\widehat\\beta - y ||$ as a loss function\n",
         "\n",
         "\n",
-        "We formulate uncertainty as a vector $\\epsilon$ that sample from a normal distribution.\n",
-        "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, or as a function to minimize, I can add some more to it. HERE!!!\n",
-        "In context of linear regression, $\\widehat{ \\beta}$ is called [**ordinary least squares estimator**](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem).\n",
-        "\n",
-        "In fact under some assumption it is the BEST estimator. But what are those assumption and why is it so greate a estimator.\n",
-        "The assumptions\n",
-        "\n",
-        "2. $\\epsilon_i$ has mean zero.\n",
-        "3. $\\epsilon_i$ has same variance for all i: ${\\displaystyle \\operatorname {Var} (\\varepsilon _{i})=\\sigma ^{2}<\\infty }$\n",
-        "4. Distinct error terms are uncorrelated\n",
-        "\n",
-        "\n",
-        "In what sense is $ {\\widehat {\\beta }}$ the best estimator? First of all, it is best estimator among all linear and unbiased ones. That means\n",
-        "1. $ {\\widehat {\\beta }}$ is linear in y ( i.e., ${\\displaystyle {\\widehat {\\beta }}_{j}=c_{1j}y_{1}+\\cdots +c_{nj}y_{n}}$)\n",
-        "2. Being unbiased means ${\\displaystyle \\operatorname {E} \\left[{\\widehat {\\beta }}_{j}\\right]=\\beta _{j}}$. We demonstrate it with data in a bit\n",
-        "\n",
-        "The best linear unbiased estimator (BLUE) of the vector\n",
-        "${\\displaystyle \\beta }$ of parameters\n",
-        "${\\displaystyle \\beta _{j}}$ is one with the smallest mean squared error for every vector ${\\displaystyle \\lambda }$ of linear combination parameters. This is equivalent to the condition that (HERE!!! i didn't understand this from wikipedia)\n",
-        "\n",
-        "$${\\displaystyle \\operatorname {Var} \\left({\\widetilde {\\beta }}\\right)-\\operatorname {Var} \\left({\\widehat {\\beta }}\\right)}$$\n",
-        "\n",
-        "\n",
-        "It turns out that the OLS estimator which is the best linear unbiased estimator  **Also** minimizes the sum of squares of residuals. Text books usually start with finding an estimator that minimizes the squares of residuals without explaining the BLUE.\n",
+        "If you like to see more reasoning behind why we picked $||Ax -b ||$ as lose function, or as a function to minimize, I can add some more to it.In context of linear regression, $\\widehat{ \\beta}$ is called [**ordinary least squares estimator**](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem).\n",
         "\n",
         "\n",
         "\n",
-        "The OLS estimator also  maximizes the likelihood function (whatever that is) when the random errors are assumed to have normal distributions with the same variance.\n",
+        "One way to justify the loss function as $||X \\widehat\\beta - y ||$, is to use the concept of **Best Linear Unbiased Estimator**.\n",
+        "\n",
+        "The idea in the procedure is that instead of aiming to find real value for $\\beta$, we aim for finding an estimator called $\\widehat\\beta$. Because of linear assumptions, we are specifically looking for a linear estimator.\n",
+        "\n",
+        "So what do we mean by linear? It means $\\widehat\\beta$ is linear in $y$ which means you can write $\\widehat\\beta$ in the form of a matrix $A$ time $y$ (e.g., $\\widehat\\beta = A y$). Goal would be to find matrix A.\n",
+        "\n",
+        "Even with the assumption of linearity, there is going to be a lot of such estimator. Another assumpotion is being unbiased. HERE!!! explain unbiased\n",
+        "HERE!!! explain the assumptions on $\\epsilon$\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "HERE!!!!!!!!!find proof that uses maximum liklihood and the dist of error to justify minimization of AX-b. HERE!!!!!!sketch of proofTo find the most likely y, under the condition of normal error,  which yields to minimizing  $||Ax -b ||$ ( It turns loss function to a liklihood function https://www.cs.princeton.edu/courses/archive/fall18/cos324/files/mle-regression.pdf)\n",
         "\n",
         "Statisticians typically motivate ordinary least squares by the [principle of maximum likelihood](https://en.wikipedia.org/wiki/Gauss%E2%80%93Markov_theorem)  because of this feature.\n",
         "\n",
