sample vs population

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -146,15 +146,9 @@
         " That's why I wanted to gain a cohesive understanding of the whole flow and how each step leads to another. This notebook is what I have learnt about it.\n",
         "\n",
         "\n",
-        "I have created a [jupyter notebook](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/DistributionsOfAspectsOfData.ipynb) to generate some random data.\n",
-        "\n",
-        "At the end of each notebook, I save artifact to the repo so we can load them in any subsequent notebook. 👾 📦\n",
-        "\n",
-        "The random data from  previous notebook follows the assumption of linear regression. This assumes that if you subtract a linear combination of predictors from the response, the result will have a standard normal distribution. Hence, you can fit a linear model to a given sample.\n",
+        "I think the key point to understand linear regression and methods built around it, is to pause and think about difference of **populataion data set** and a given **sample data set**. Let's play around with the two concept with our data: ⏸\n",
         "\n",
         "\n",
-        "\n",
-        "It's important to pause a bit and notice the differenc of a given sample of size n and the whole population. Let's look at a given sample. ⏸\n",
         "\n",
         "\n",
         "\n",
@@ -210,6 +204,25 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "The random data from  previous notebook follows the assumption of linear regression. This assumes that if you subtract a linear combination of predictors from the response, the result will have a standard normal distribution. Hence, you can fit a linear model to a given sample.\n",
+        "\n",
+        "\n",
+        "The fact is that we either don't have access to the whole population, or it is computationally too difficult to fit linear regression on the whole population set.\n",
+        "\n",
+        "\n",
+        "Because of that we pull a set of samples, (sample data set) and fit the model on it. But how do we know that the sample follows the assumption of linear regression as well? What if the sample data set is a horrible representetive of population data set and not random at all? The way to ensure is to sample with replacement. Doing so lets us make assuption about distribution of error for the given sample.\n",
+        "\n",
+        "Although we can make some assumption on the sample data set, it is not gonna be the same assumption as we do for the whole population. That is we say the **linear regression coefficients** for a sample is an estimate for linear regression coefficients for population data set. ($\\beta$ vs $\\widehat\\beta$. More on that [here](https://colab.research.google.com/github/aminehd/AminehTechnicalWritings/blob/main/notebookes/LinearRegressionMatrix.ipynb#scrollTo=cwhNfPNNkFAH) )\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "-KOrLgcoKBXL"
+      }
     },
     {
       "cell_type": "markdown",
