updated introduction to linear regression

--- a/notebookes/LinearRegressionMatrix.ipynb
+++ b/notebookes/LinearRegressionMatrix.ipynb
@@ -138,15 +138,20 @@
       "cell_type": "markdown",
       "source": [
         "## Introduction\n",
-        "In this notebook, I would like to go through the linear regression concepts. It's in first chapter of all AI/ML books. Usually the author starts very inncocently by showing some plots of dots, scattered approximately along a line.\n",
+        "In this notebook, I would like to go through the linear regression concepts. The way I came across the concept in differnt books goes like this.\n",
+        "First some introduction of statistics concepts of how the data looks like, whats a predictor, what is a response, and the goal that is to train from a **sample** data set.\n",
+        " And then there is some matrix notations plus loss functions and instruction on how to use them to reach the goal which is training the model based on given **sample**.\n",
+        " Ocasionally, at the end, there might be a word or two on how Maximum liklihood or Best Linear Unbiased Estimator  is relevent to the subject.\n",
         "\n",
-        " Then they flash a bunch of matrixes at you. Just a bit before end of the chapter,  they make an apeal to you to believe it was all about Maximum liklihood framework and normal probability distribution, all along.\n",
+        "So you see, it starts with statistics, then turns to linear algebra and some analysis, and finally a lot of probability that sounds very uncalled for.\n",
         "\n",
-        "  Maybe it's only me, but I'm always lost after the matrix notation.\n",
-        " That's why I wanted to gain a cohesive understanding of the whole flow and how each step leads to another. This notebook is what I have learnt about it.\n",
+        "In this notebook, I attempt to teach the linear regression, while separating all this major ideas from different fields of study. I also try to implement python function that serves as a mechanism to talk about all this mathematical abstractions. My hope is to give the audience tools to answer their questions about all this concepts using the python utilities . Hopefully, I can build more tools around them to teach even more complex Machine Learning concepts.\n",
         "\n",
+        "I think the key point to understand linear regression and methods built around it, is to pause and think about difference of **populataion data set** and a given **sample data set**. Let's play around with the two concept with our data. ⏸\n",
         "\n",
-        "I think the key point to understand linear regression and methods built around it, is to pause and think about difference of **populataion data set** and a given **sample data set**. Let's play around with the two concept with our data: ⏸\n",
+        "I have wrote some utility function that helps you build a sampler around given population.\n",
+        "Once you built a sampler from population, you can fix the set of predictors (`set_sample_xs`). Finally you can use `sample_response` to sample `y`s with replacement.\n",
+        "You can think of it as a experiment in which the predictor is age and outcome is their credit score. Before starting the experminet you know how many people and from what ages you would like to run experiment on. Just knowing the ages (predictor) is not enought since there is so many people with same age thus so many credit scores (response) that can be used as training set.  So what you need to do is to sample actual people of the given ages to study their credit scores.\n",
         "\n",
         "\n",
         "\n",
